// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders instrumentwallcard unchanged 1`] = `
<div>
  <div
    class="flex"
  >
    <a
      class="flex items-center justify-center text-center py-1 w-28 max-h-12 rounded-lg shadow-xs border-2 border-gray-700 dark:border-gray-200 hover:shadow-lg hover:border-black dark:hover:border-gray-700 transition-all duration-200
      bg-[#90EE90] text-black"
      href="/instrument?name=Instrument"
    >
      <div
        class="flex flex-col"
      >
        <span
          class="text-sm font-bold line-clamp-1 w-full"
        >
          Instrument
        </span>
        <span
          class="text-xs "
        >
          RUNNING
        </span>
      </div>
    </a>
  </div>
</div>
`;

exports[`renders instrumentwallcard unchanged when runstate is unknown 1`] = `
<div>
  <div
    class="flex"
  >
    <a
      class="flex items-center justify-center text-center py-1 w-28 max-h-12 rounded-lg shadow-xs border-2 border-gray-700 dark:border-gray-200 hover:shadow-lg hover:border-black dark:hover:border-gray-700 transition-all duration-200
      bg-[#F08080] text-black"
      href="/instrument?name=Instrument1"
    >
      <div
        class="flex flex-col"
      >
        <span
          class="text-sm font-bold line-clamp-1 w-full"
        >
          Instrument1
        </span>
        <span
          class="text-xs "
        >
          UNREACHABLE
        </span>
      </div>
    </a>
  </div>
</div>
`;
